src/tess/tl/test/fail/test_fail_import_absolute.tl
#module main
// Absolute paths are not allowed in imports
#import "/etc/passwd"
main() { 0 }
